--- a/sass/abstracts/_mixin.scss
+++ b/sass/abstracts/_mixin.scss
@@ -15,13 +15,13 @@ $breakpoint argument choices:
 */
 @mixin respond($breakpoint) {
   @if $breakpoint == tab-port {
-    @media only screen and (min-width: 37.5em) {
+    @media only screen and (min-width: 43.75em) {
       //600px
       @content;
     }
   }
   @if $breakpoint == tab-land {
-    @media only screen and (min-width: 56.25em) {
+    @media only screen and (min-width: 50em) {
       //900px
       @content;
     }
