--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,7 +16,7 @@
 }
 .hero {
   margin-bottom: calc(var(--margin-x-large) * 2);
-  @include respond(tab-land) {
+  @include respond(tab-port) {
     display: flex;
     margin-top: var(--margin-medium);
     overflow: hidden;
@@ -26,7 +26,7 @@
   &__media {
     margin-bottom: var(--margin-large);
     overflow: hidden;
-    @include respond(tab-land) {
+    @include respond(tab-port) {
       overflow: visible;
       order: 2;
       margin-bottom: 0;
@@ -35,13 +35,14 @@
   &__image {
     display: inline-block;
     padding-left: var(--page-padding);
-    @include respond(tab-land) {
+    @include respond(tab-port) {
       padding-left: 0;
     }
     img {
       display: inline-block;
-      width: 150%;
-      @include respond(tab-land) {
+      width: 120%;
+
+      @include respond(tab-port) {
         width: 120%;
       }
     }
@@ -49,7 +50,7 @@
   &__inner {
     text-align: center;
     padding: 0 var(--page-padding);
-    @include respond(tab-land) {
+    @include respond(tab-port) {
       text-align: left;
       align-self: center;
     }
